--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="/fonts/fonts.css" />
-    <link rel="stylesheet" href="/styles/global.css" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="/fonts/fonts.css">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
+    <!--HEADER-->
     <header class="header">
       <nav class="header__menu">
         <ul class="header__menu-list">
@@ -30,19 +31,17 @@
         <img
           class="header__logo-image"
           src="/images/logo-black.svg"
-          alt="Логотип проекта Оно тебе надо"
-        />
+          alt="Логотип проекта Оно тебе надо">
       </a>
       <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>
-          наб. Принсенграхт 263-265, <br />
-          Амстердам
-        </p>
+        <p>наб. Принсенграхт 263-265,</p>
+        <p>Амстердам</p>
       </address>
     </header>
     <main>
+      <!--COVER-->
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
@@ -66,6 +65,7 @@
           <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
+      <!--LOTS-->
       <section class="lots">
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
@@ -112,7 +112,7 @@
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
                   что это — одна из революционных работ Кандинского?
                 </p>
               </article>
@@ -121,8 +121,76 @@
         </ul>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
-      <section class="about"></section>
+      <!--ABOUT-->
+      <section class="about">
+        <div class="about__column">
+          <div class="about__logo">
+            <img
+              class="about__logo-image"
+              src="/images/logo-white.svg"
+              alt="Логотип проекта Оно тебе надо">
+          </div>
+          <h2 class="about__title">Об аукционе</h2>
+          <div class="about__text">
+          <p>
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p>
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+        </div>
+        </div>
+      </section>
     </main>
-    <footer class="footer"></footer>
+      <!--FOOTER-->
+    <footer class="footer">
+      <address class="address footer__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265,</p>
+        <p>Амстердам</p>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-item">
+            <a class="footer__menu-link footer__menu-link-active" href="#0"
+              >главная</a
+            >
+          </li>
+          <li class="footer__menu-item">
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-item">
+            <a class="footer__menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img class="footer__social-icon" src="/images/yt.svg" alt="Ютуб">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img class="footer__social-icon" src="/images/vk.svg" alt="Вконтакте">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img class="footer__social-icon" src="/images/pinterest.svg" alt="pinterest">
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
