--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="/fonts/fonts.css">
-    <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/fonts/fonts.css" />
+    <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <!--HEADER-->
@@ -31,7 +31,8 @@
         <img
           class="header__logo-image"
           src="/images/logo-black.svg"
-          alt="Логотип проекта Оно тебе надо">
+          alt="Логотип проекта Оно тебе надо"
+        />
       </a>
       <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -113,7 +114,7 @@
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
                   котиков... Сколько бы вы на такое поставили, если бы не знали,
-                  что это — одна из революционных работ Кандинского?
+                  что это — одна революционных работ Кандинского?
                 </p>
               </article>
             </a>
@@ -128,30 +129,32 @@
             <img
               class="about__logo-image"
               src="/images/logo-white.svg"
-              alt="Логотип проекта Оно тебе надо">
+              alt="Логотип проекта Оно тебе надо"
+            />
           </div>
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
-          <p>
-            Здесь вы не встретите очередное пафосное собрание невероятно
-            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
-            один аукцион. Потому что кому нужен дневник девочки-подростка или
-            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
-            странные вещи, созданные любителями?
-          </p>
-          <p>
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё
-            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря на критику,
-            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
-            представить современную культуру. Когда в эти вещи не верил никто,
-            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
-          </p>
-        </div>
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
+            </p>
+          </div>
         </div>
       </section>
     </main>
-      <!--FOOTER-->
+    <!--FOOTER-->
     <footer class="footer">
       <address class="address footer__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -177,17 +180,25 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="/images/yt.svg" alt="Ютуб">
+            <img class="footer__social-icon" src="/images/yt.svg" alt="Ютуб" />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="/images/vk.svg" alt="Вконтакте">
+            <img
+              class="footer__social-icon"
+              src="/images/vk.svg"
+              alt="Вконтакте"
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="/images/pinterest.svg" alt="pinterest">
+            <img
+              class="footer__social-icon"
+              src="/images/pinterest.svg"
+              alt="pinterest"
+            />
           </a>
         </li>
       </ul>
