--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="/fonts/fonts.css" />
-    <link rel="stylesheet" href="/styles/global.css" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
+    <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
   </head>
   <body>
     <!--HEADER-->
@@ -30,7 +30,7 @@
       <a class="header__logo">
         <img
           class="header__logo-image"
-          src="/images/logo-black.svg"
+          src="./images/logo-black.svg"
           alt="Логотип проекта Оно тебе надо"
         />
       </a>
@@ -63,7 +63,7 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button type="button" class="bet-button">Сделать ставку</button>
         </div>
       </section>
       <!--LOTS-->
@@ -128,7 +128,7 @@
           <div class="about__logo">
             <img
               class="about__logo-image"
-              src="/images/logo-white.svg"
+              src="./images/logo-white.svg"
               alt="Логотип проекта Оно тебе надо"
             />
           </div>
@@ -180,14 +180,14 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="/images/yt.svg" alt="Ютуб" />
+            <img class="footer__social-icon" src="./images/yt.svg" alt="Ютуб" />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
             <img
               class="footer__social-icon"
-              src="/images/vk.svg"
+              src="./images/vk.svg"
               alt="Вконтакте"
             />
           </a>
@@ -196,7 +196,7 @@
           <a class="footer__social-link" href="#0">
             <img
               class="footer__social-icon"
-              src="/images/pinterest.svg"
+              src="./images/pinterest.svg"
               alt="pinterest"
             />
           </a>
